--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 
 body {
   display: grid;
+  height: 100vh;
 }
 
 #page_header {
@@ -12,30 +13,40 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 #page_main {
-  min-height: 80vh;
   display: grid;
-  align-items: center;
+  place-content: center;
+  height: 80vh;
   width: 100%;
-  padding-left: 20px;
 }
 #page_main img {
   object-fit: cover;
   border-radius: 100%;
+  margin-bottom: 10px;
 }
 
 .page_text {
   display: grid;
   margin-top: 20px;
-  width: 80%;
+  width: 100%;
+}
+.page_text h3 {
+  margin-bottom: 10px;
+}
+.page_text h1 {
+  margin-bottom: 10px;
+}
+.page_text h4 {
+  margin-bottom: 20px;
 }
 .page_text p {
-  width: 400px;
+  width: 300px;
+  text-overflow: wrap;
   letter-spacing: 2px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .details {
@@ -44,17 +55,18 @@ body {
   margin-bottom: 5px;
 }
 .details h3 {
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 }
 .details p {
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 }
 
 #page_footer {
-  min-height: 10vh;
+  height: 10vh;
   display: grid;
   place-items: center;
   background-color: rgb(0, 0, 0);
+  margin-top: 20px;
 }
 #page_footer p {
   color: rgb(251, 251, 251);
