--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 
 body {
     display: grid;
+    height: 100vh;
   
 }
 
@@ -13,21 +14,22 @@ body {
     display: grid;
     place-items: center;
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 #page_main {
-    min-height: 80vh;
     display: grid;
-    align-items: center;
+    place-content: center;
+    height: 80vh;
     width: 100%;
-    padding-left: 20px;
+
 
 
 
     img {
         object-fit: cover;
         border-radius: 100%;
+        margin-bottom: 10px;
     
     }
 
@@ -39,13 +41,25 @@ body {
 .page_text {
     display: grid;
     margin-top: 20px;
-    width: 80%;
+    width: 100%;
+
+    h3 {
+        margin-bottom: 10px;
+    }
+    h1{
+        margin-bottom: 10px;
+    }
+
+    h4 {
+        margin-bottom: 20px;
+    }
     
 
     p{
-        width: 400px;
+width: 300px;
+text-overflow: wrap;
 letter-spacing: 2px;
-margin-bottom: 10px;
+margin-bottom: 20px;
     }
 }
 
@@ -55,21 +69,26 @@ margin-bottom: 10px;
     margin-bottom: 5px;
 
     h3 {
-        margin-bottom: 5px;
+        margin-bottom: 2px;
     }
 
-    p {
-        margin-bottom: 5px;
+    p {    
+            
+        
+
+        margin-bottom: 2px;
     }
 }
 
 #page_footer {
-    min-height: 10vh;
+    height: 10vh;
     display: grid;
     place-items: center;
     background-color: rgb(0, 0, 0);
+    margin-top: 20px;
 
     p {
+
         color: rgb(251, 251, 251);
     }
 }
