--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: 1fr 1fr;
-  margin-bottom: 5px;
+  margin-bottom: 50px;
 }
 
 #page_main {
@@ -30,7 +30,7 @@ body {
 
 .page_text {
   display: grid;
-  margin-top: 20px;
+  margin-top: 10px;
   width: 100%;
 }
 .page_text h3 {
@@ -66,10 +66,66 @@ body {
   display: grid;
   place-items: center;
   background-color: rgb(0, 0, 0);
-  margin-top: 20px;
+  margin-top: 10px;
 }
 #page_footer p {
   color: rgb(251, 251, 251);
+}
+
+@media only screen and (min-width: 1020px) {
+  .page_text {
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 50%;
+  }
+  .page_text img {
+    width: 80%;
+    margin-bottom: 10px;
+  }
+  .page_text h3 {
+    margin-top: -20px;
+  }
+}
+@media only screen and (min-width: 1020px) {
+  #page_main {
+    display: grid;
+    place-items: center;
+    min-width: 60%;
+  }
+  #page_main p {
+    width: 150px;
+    text-overflow: wrap;
+    letter-spacing: 2px;
+  }
+  #page_main h3 {
+    margin-bottom: 2px;
+  }
+  #page_main #A1 {
+    margin-bottom: 50px;
+    align-items: center;
+  }
+}
+@media only screen and (min-width: 1020px) {
+  .details {
+    display: grid;
+    place-items: center;
+    margin-top: 20px;
+  }
+  .details h3 {
+    margin-bottom: 2px;
+  }
+  .details p {
+    margin-bottom: 4px;
+  }
+  .details img {
+    margin-top: -40px;
+  }
+}
+@media only screen and (min-width: 1020px) {
+  #about {
+    margin-top: -80px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
