--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,7 @@
 body {
     display: grid;
     height: 100vh;
-  
+
 }
 
 #page_header {
@@ -14,7 +14,7 @@ body {
     display: grid;
     place-items: center;
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 5px;
+    margin-bottom: 50px;
 }
 
 #page_main {
@@ -30,7 +30,7 @@ body {
         object-fit: cover;
         border-radius: 100%;
         margin-bottom: 10px;
-    
+
     }
 
 
@@ -40,26 +40,27 @@ body {
 
 .page_text {
     display: grid;
-    margin-top: 20px;
+    margin-top: 10px;
     width: 100%;
 
     h3 {
         margin-bottom: 10px;
     }
-    h1{
+
+    h1 {
         margin-bottom: 10px;
     }
 
     h4 {
         margin-bottom: 20px;
     }
-    
 
-    p{
-width: 300px;
-text-overflow: wrap;
-letter-spacing: 2px;
-margin-bottom: 20px;
+
+    p {
+        width: 300px;
+        text-overflow: wrap;
+        letter-spacing: 2px;
+        margin-bottom: 20px;
     }
 }
 
@@ -72,9 +73,9 @@ margin-bottom: 20px;
         margin-bottom: 2px;
     }
 
-    p {    
-            
-        
+    p {
+
+
 
         margin-bottom: 2px;
     }
@@ -85,10 +86,88 @@ margin-bottom: 20px;
     display: grid;
     place-items: center;
     background-color: rgb(0, 0, 0);
-    margin-top: 20px;
+    margin-top: 10px;
 
     p {
 
         color: rgb(251, 251, 251);
+    }
+}
+
+@media only screen and (min-width:1020px) {
+
+    .page_text {
+        display: grid;
+        place-items: center;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 50%;
+
+
+        img {
+            width: 80%;
+            margin-bottom: 10px;
+        }
+
+        h3{
+            margin-top: -20px;
+        }
+
+    }
+
+}
+
+@media only screen and (min-width:1020px) {
+    #page_main {
+        display: grid;
+        place-items: center;
+        min-width: 60%;
+
+        p {
+            width: 150px;
+            text-overflow: wrap;
+            letter-spacing: 2px;
+        
+        }
+
+        h3 {
+            margin-bottom: 2px;
+        }
+
+        #A1{
+            margin-bottom: 50px;
+            align-items: center;
+
+        }
+
+
+    }
+}
+
+@media only screen and (min-width:1020px) {
+
+    .details {
+        display: grid;
+        place-items: center;
+        margin-top: 20px;
+
+
+        h3 {
+            margin-bottom: 2px;
+        }
+
+        p {
+            margin-bottom: 4px;
+        }
+
+        img {
+            margin-top: -40px;
+        }
+
+    }
+}
+
+@media only screen and (min-width:1020px) {
+    #about {
+        margin-top: -80px;
     }
 }
